[project]
name = "griptape-nodes-library-firecrawl"
version = "0.1.0"
description = "A Griptape Nodes library for Firecrawl"
authors = [{ name = "Collin Dutter", email = "collin@griptape.ai" }]
requires-python = ">=3.12"
dependencies = ["griptape-nodes", "firecrawl"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
